--- a/VehicleInheritance/VehicleInheritance.vcxproj
+++ b/VehicleInheritance/VehicleInheritance.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="Car.cpp" />
     <ClCompile Include="Truck.cpp" />
     <ClCompile Include="Vehicle.cpp" />
+    <ClCompile Include="VehicleTest.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
