--- a/VehicleInheritance/VehicleInheritance.vcxproj.filters
+++ b/VehicleInheritance/VehicleInheritance.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="Truck.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VehicleTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
